# Chinese-Chess-AI

./: C++_project_build.bat  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  Evaluate.cpp  Evaluate.h  Generate.cpp  Main.cpp  Position.cpp  Position.h  Predict.cpp  README.md  README.txt  Repeat.cpp  Search.cpp  Search.h  Search无注释.cpp  Ucci.cpp  Ucci.h  eval_.h  git.txt  mychess.vcxproj  mychess.vcxproj.filters  nowSearch.cpp  position.cpp  test.sln  test.txt  ucci.cpp
chess_vs2019/: ChessBoard.cpp  Evaluate.cpp  Evaluate.h  Generate.cpp  Main.cpp  Position.cpp  Ucci.h  mychess.vcxproj  mychess.vcxproj.filters
include/: Evaluate.h  Position.h  Search.h
mychess/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  Evaluate.cpp  Evaluate.h  Generate.cpp  Main.cpp  Position.cpp  Position.h  Search.cpp  Ucci.h  mychess.sln  mychess.vcxproj  mychess.vcxproj.filters  position_jrj.cpp
mychess/include/: ChessBoard.h  Evaluate.h  Position.h  Ucci.h
mychess/pastevaluate/: Evaluate_2.cpp  Evaluate_2.h
mychess/src/: ChessBoard.cpp  Evaluate.cpp  Generate.cpp  Main.cpp  Position.cpp  Predict.cpp  Repeat.cpp  Search.cpp  ucci.cpp
pastevaluate/: Evaluate.cpp  Evaluate2.h  Evaluate_2.cpp  Evaluate_2.h
src/: Evaluate.cpp  Generate.cpp  Main.cpp  Position.cpp  Predict.cpp  Repeat.cpp  Search.cpp  ucci.cpp
test/: C++_project_build.bat  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  Dll1.lib  Evaluate.cpp  Evaluate.h  Generate.cpp  Main.cpp  Position.cpp  Position.h  Predict.cpp  Repeat.cpp  Search.cpp  Search.h  Ucci.h  book.cpp  book.h  book2.h  buffer2.h  hash2.h  movesort2.h  (+9 more)
(+12 files in other folders)
